# HAZARD-simulator

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  BFE correlations.ipynb  CITATION.cff  GCR_GUI.py  GCRsim_v02f.py  GCRsim_v02h.py  HgPerl.pl  InfoHg.txt  LICENSE  README.md  README.rst  RunsHg.txt  Select_20663X_summary.txt  config.yml  electron_spread.py  electron_spread2.py  index.json  info.json  pyproject.toml  quickPSF.py  regressions.json  regressions.xml  requirements.txt  slurm-4264751.out
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: asv-main.yml  asv-nightly.yml  asv-pr.yml  pre-commit-ci.yml  publish-benchmarks-pr.yml  publish-to-pypi.yml  smoke-test.yml  testing-and-coverage.yml
Deprecated/: GCRsim_v02f.py  GCRsim_v02i.py  Trajectory profile and Bragg curve.ipynb  electron_spread.py
EmilyWork/: Energies80.txt  EnergiesMgFinder.py  EnergyandWaves.py  GCR_Sim_Dirac (2).ipynb  ThomasFermi.py  WFGenerator.py
GCRsim refactor/: Material Class.py  MaterialClass.ipynb  SolarEnvironment.py
Pipeline test/: GCRsim_v02h.py  README.md  pyproject.toml  roman_pipeline_interface.py  roman_pipeline_interface_test.ipynb
Pipeline test/src/gcrsim/: GCRsim_v02h.py  __init__.py  electron_spread2.py  fastforwardRNG.py  roman_pipeline_interface.py
RTN/: hgcdte_hbtpmodel.py  zincblende_tbmodel.py
Validation Tests/: gini_comparison_widget.ipynb
Validation tests/: charge_diffusion_envelope_v01d.ipynb  charge_diffusion_validation.ipynb  cosmic ray sim calculations.nb  d2020_f352_run1_parent_moments_report.csv  gini_comparison_widget.ipynb  quickPSF.py
_results/gh-runner/: 042337a3-virtualenv-py3.13-Cython-build-packaging.json  04e9cf04-virtualenv-py3.13-Cython-build-packaging.json  065bd3e5-virtualenv-py3.13-Cython-build-packaging.json  06f6e89a-virtualenv-py3.13-Cython-build-packaging.json  077f725e-virtualenv-py3.13-Cython-build-packaging.json  0bde1558-virtualenv-py3.13-Cython-build-packaging.json  0e452c5c-virtualenv-py3.13-Cython-build-packaging.json  0e8ac6b8-virtualenv-py3.13-Cython-build-packaging.json  0e9f4ffe-virtualenv-py3.13-Cython-build-packaging.json  12aef5c4-virtualenv-py3.13-Cython-build-packaging.json  12b7886b-virtualenv-py3.13-Cython-build-packaging.json  1739316e-virtualenv-py3.13-Cython-build-packaging.json  183addb7-virtualenv-py3.13-Cython-build-packaging.json  193d5d98-virtualenv-py3.13-Cython-build-packaging.json  1b6fa024-virtualenv-py3.13-Cython-build-packaging.json  (+169 more)
benchmarks/: asv.conf.json  benchmarks.py
docs/: conf.py  index.rst  requirements.txt
(+12 files in other folders)
