[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gcrsim"
version = "0.2.0"
description = "Minimal Roman GCR simulation + pixelization pipeline"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anthony Harbo Torres" },
  { name = "Christopher Hirata" },
  { name = "Zac Brutko"},
  { name = "Emily Koivu" }]
license = { text = "MIT" }

dependencies = [
  "numpy",
  "scipy",
  "pandas"
]

[project.scripts]
gcrsim-run = "gcrsim.roman_pipeline_interface:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gcrsim = ["data/*"]

