[project]
name = "gcrsim"
description = "Dynamic Roman GCR simulation and pixelization pipeline"
readme = "README.md"
license = "MIT" 
license-files = ["LICENSE"]

authors = [
    { name = "Anthony Harbo Torres, et. al.", email = "harbotorres.1@osu.edu" }
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

requires-python = ">=3.9"
dependencies = []

# Dynamic versioning handled by setuptools_scm
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/HAZARD-simulator/gcrsim"

[project.optional-dependencies]
dev = [
    "asv==0.6.4",
    "virtualenv==20.30",
    "jupyter",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[build-system]
requires = [
    "setuptools>=62",
    "setuptools_scm>=6.2",
    "wheel"
]
build-backend = "setuptools.build_meta"

# setuptools_scm will write a version string to this file automatically
[tool.setuptools_scm]
write_to = "src/gcrsim/_version.py"
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"


[tool.pytest.ini_options]
testpaths = ["tests", "src", "docs"]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "N", "UP", "B", "SIM", "I", "D101", "D102", "D103", "D106", "D206", "D207", "D208", "D300", "D417", "D419", "NPY201"]
ignore = ["UP006", "UP007", "SIM114", "B028", "SIM117", "UP015", "UP028"]

[tool.coverage.run]
omit = ["src/gcrsim/_version.py"]
